Main Page Images Added

--- a/BloodDonation/Views/Home/AllCampaigns.cshtml
+++ b/BloodDonation/Views/Home/AllCampaigns.cshtml
@@ -80,11 +80,7 @@
                         <ul class="nav navbar-nav navbar-right">
 
                             <li>
-                                <a href="#">Home</a>
-                                <ul class="drop-down">
-                                    <li><a href="index.html" title="Home Layout 01">Home 01</a></li>
-                                    <li><a href="home-2.html" title="Home Layout 02">Home 02</a></li>
-                                </ul>
+                                <a href="@Url.Content("~/Home/MainHome")">Home</a>
                             </li>
 
                             <li><a href="about-us.html" title="About Us">About Us</a></li>
@@ -252,35 +248,35 @@
             <div class="row">
                 <div class="logo-items owl-carousel logo-layout-1 text-center">
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_1.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_1.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_2.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_2.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_3.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_3.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_4.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_4.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_5.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_5.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_6.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_6.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_7.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_7.jpg")" alt="" />
                     </div>
 
                     <div class="client-logo">
-                        <img src="~/Content/Template/images/logo_8.jpg" alt="" />
+                        <img src="@Url.Content("~/Content/Template/images/logo_8.jpg")" alt="" />
                     </div>
                 </div> <!-- end .testimonial-container  -->
             </div> <!-- end row  -->
