--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -87,11 +87,7 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a href="#">Home</a>
-                                    <ul class="drop-down">
-                                        <li><a href="index.html" title="Home Layout 01">Home 01</a></li>
-                                        <li><a href="home-2.html" title="Home Layout 02">Home 02</a></li>
-                                    </ul>
+                                    <a href="@Url.Content("~/Home/MainHome")">Home</a>
                                 </li>
 
                                 @if (userTypeID == 1)
