--- a/BloodDonation/Views/Home/AllCampaigns.cshtml
+++ b/BloodDonation/Views/Home/AllCampaigns.cshtml
@@ -83,7 +83,13 @@
                                 <a href="@Url.Content("~/Home/MainHome")">Home</a>
                             </li>
 
-                            <li><a href="about-us.html" title="About Us">About Us</a></li>
+                            <li>
+                                <a href="@Url.Content("~/Home/AboutUs")">About Us</a>
+                            </li>
+
+                            <li>
+                                <a href="@Url.Content("~/Finder/FinderDonors")">Find Donor</a>
+                            </li>
 
                             <li>
                                 <a href="#">Campaign</a>
