--- a/BloodDonation/Views/Finder/FinderDonors.cshtml
+++ b/BloodDonation/Views/Finder/FinderDonors.cshtml
@@ -5,9 +5,17 @@
 
 @using (Html.BeginForm())
 {
+    bool isUserLogin = false;
+
+    if (!string.IsNullOrEmpty(Convert.ToString(Session["UserName"])))
+    {
+        isUserLogin = true;
+    }
+
     @Html.AntiForgeryToken()
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
     <div class="col-md-8">
         <div class="contact-form-block">
             <h2 class="contact-title">Finded Donor</h2>
@@ -30,29 +38,42 @@
                     <input type="submit" style="float: right" value="Search" class="btn btn-theme" />
                 </div>
             </p>
-            <table class="table table-hover">
-                <tr>
-                    <th>
-
-                    </th>
-                    <th></th>
-                </tr>
-
-                @foreach (var item in Model.SearchResult)
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="accordion">
+            @foreach (var item in Model.SearchResult)
+            {
+            <div class="panel panel-default faq-box">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#@string.Format("collapse{0}", item.UserID)"><strong>@item.FullName (@item.BloodGroup)</strong></a>
+                        @Html.ActionLink("Request", "RequestForBlood", new { donorID = item.DonorID, userTypeID = item.UserTypeID, bloodGroupID = item.BloodGroupID }, new
+                        {
+                            @class = "btn btn-invert",
+                            @style = "float: right; " +
+                        "background-color: #E83914; border: none; color: white; padding: 10px 22px; text-align: center; display: inline-block; font-size: 14px;"
+                        })
+                    </h4>
+                </div>
+                @if (isUserLogin == true)
                 {
-                    <tr>
-                        <td class="text-left">
-                            <div>
-                                <strong>@item.FullName (@item.BloodGroup)</strong>
-                            </div>
-                            @item.UserType
-                        </td>
-                        <td class="text-right">
-                            @Html.ActionLink("Request", "RequestForBlood", new { donorID = item.DonorID, userTypeID = item.UserTypeID, bloodGroupID = item.BloodGroupID }, new { @class = "btn btn-primary" })
-                        </td>
-                    </tr>
+                    <div id="@string.Format("collapse{0}", item.UserID)" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <strong>User Type: @item.UserType</strong><br />
+                            <strong>Phone №: @item.ContactNo</strong><br />
+                            <strong>Address: @item.Address</strong>
+                        </div>
+                    </div>
                 }
-            </table>
+                else
+                {
+                    <div id="@string.Format("collapse{0}", item.UserID)" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <strong>Please First Login to Get Donor Details Here</strong>
+                        </div>
+                    </div>
+                }
+            </div>
+            }
         </div>
     </div>
 }
